--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,11 @@
 <h1>Jobs</h1>
+<%= form_tag jobs_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
+
 <%unless  @jobs.nil? %>
   <table>
   <th>Title</th>
