--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -12,7 +12,7 @@
 
 <div>
     <h3>Languages</h3>
-    <span><%= @job.languages %><span/>
+    <span><%= languages_array_to_string(@job.languages) %><span/>
 </div>
 
 <div>
